--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,11 @@
 html {
   background-image: url("./background.jpeg");
-  background-size: cover;
   font-size: 10px;
-  max-width: 960px;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
-body,
-html {
-  margin: 0 auto;
+body {
   padding: 0;
   font-family: sans-serif;
 }
@@ -46,8 +44,8 @@ kbd {
 }
 
 .sound {
-  font-size: 1.2rem;
+  font-size: 1rem;
   text-transform: uppercase;
-  letter-spacing: 1rem;
+  letter-spacing: 0.1rem;
   color: #ffc600;
 }
