--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,6 @@ html {
 }
 
 body {
-  padding: 0;
   font-family: sans-serif;
 }
 
@@ -47,5 +46,22 @@ kbd {
   font-size: 1rem;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
+  color: #ffc600;
+}
+
+footer {
+  font-size: 1rem;
+  text-align: center;
+  color: #ffffff;
+  padding-bottom: 15px;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+a:hover {
+  transition: all 150ms ease-in-out;
   color: #ffc600;
 }
